--- a/07.flexbox/project/css/style.css
+++ b/07.flexbox/project/css/style.css
@@ -1,20 +1,3 @@
-/*
-COLORS
-
-Primary: #eb2f64
-Primary light: #FF3366
-Primary dark: #BA265D
-
-Grey light 1: #faf9f9
-Grey light 2: #f4f2f2
-Grey light 3: #f0eeee
-Grey light 4: #ccc
-
-Grey dark 1: #333
-Grey dark 2: #777
-Grey dark 3: #999
-
-*/
 :root {
   --primary: #eb2f64;
   --primaryLight: #ff3366;
@@ -25,7 +8,8 @@ Grey dark 3: #999
   --greyLight4: #ccc;
   --greyDark1: #333;
   --greyDark2: #777;
-  --greyDark3: #999; }
+  --greyDark3: #999;
+  --shadowDark: 0 2rem 6rem rgba(0, 0, 0, 0.3); }
 
 * {
   margin: 0;
@@ -49,3 +33,27 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   min-height: 100vh; }
+
+.container {
+  max-width: 120rem;
+  min-height: 40rem;
+  margin: 8rem auto;
+  background-color: var(--greyLight1);
+  box-shadow: var(--shadowDark); }
+
+.header {
+  height: 7rem;
+  background-color: #fff;
+  border-bottom: var(--greyLight2); }
+
+.content {
+  display: flex; }
+
+.sidebar {
+  background-color: var(--greyDark1);
+  flex: 0 0 18%; }
+
+.hotel-view {
+  background-color: #fff;
+  background-color: orange;
+  flex: 1; }
